--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Django==1.4.3
+Fabric==1.5.2
 South==0.7.6
 argparse==1.2.1
-distribute==0.6.10
+distribute==0.6.34
 ## FIXME: could not find svn URL in dependency_links for this package:
 flup==1.0.3.dev-20110405
+paramiko==1.9.0
 psycopg2==2.4.6
+pycrypto==2.6
 wsgiref==0.1.2
