--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Fabric==1.5.2
 South==0.7.6
 argparse==1.2.1
 distribute==0.6.34
+docutils==0.10
 ## FIXME: could not find svn URL in dependency_links for this package:
 flup==1.0.3.dev-20110405
 paramiko==1.9.0
