--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distribute==0.6.34
 docutils==0.10
 ## FIXME: could not find svn URL in dependency_links for this package:
 flup==1.0.3.dev-20110405
+markdown2==2.1.0
 paramiko==1.9.0
 psycopg2==2.4.6
 pycrypto==2.6
