Added Angular demo as submodule

--- a/deploy/lighttpd.conf
+++ b/deploy/lighttpd.conf
@@ -10,10 +10,12 @@ $HTTP["host"] =~ "(^|\.)kavaleu\.ru$" {
     )
     alias.url = (
         "/static" => env.HOME + "/kavaleu_ru/static",
+	"/demo/angular"  => env.HOME + "/kavaleu_ru/externals/angular_tutor",
     )
 
     url.rewrite-once = (
         "^(/static.*)$" => "$1",
+	"^(/demo/angular.*$" => "$1",
         "^/favicon\.ico$" => "/static/favicon.ico",
         "^(/.*)$" => "/django.fcgi$1",
     )
