Added missing ) in lighttpd config

--- a/deploy/lighttpd.conf
+++ b/deploy/lighttpd.conf
@@ -15,7 +15,7 @@ $HTTP["host"] =~ "(^|\.)kavaleu\.ru$" {
 
     url.rewrite-once = (
         "^(/static.*)$" => "$1",
-	"^(/demo/angular.*$" => "$1",
+	"^(/demo/angular.*)$" => "$1",
         "^/favicon\.ico$" => "/static/favicon.ico",
         "^(/.*)$" => "/django.fcgi$1",
     )
