--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Django==1.5.1
-Fabric==1.5.2
-South==0.7.6
+Django==1.6
+Fabric==1.8.0
+South==0.8.4
 argparse==1.2.1
-distribute==0.6.34
-docutils==0.10
+distribute==0.7.3
+docutils==0.11
+ecdsa==0.10
 ## FIXME: could not find svn URL in dependency_links for this package:
 flup==1.0.3.dev-20110405
 markdown2==2.1.0
-paramiko==1.9.0
-psycopg2==2.4.6
-pycrypto==2.6
+paramiko==1.12.0
+psycopg2==2.5.1
+pycrypto==2.6.1
 wsgiref==0.1.2
