--- a/local_settings.template
+++ b/local_settings.template
@@ -8,3 +8,10 @@ LOCAL_DATABASES = {
         'PORT': '',
     }
 }
+
+import sys
+if 'test' in sys.argv:
+    LOCAL_DATABASES['default'] = {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': 'mydatabase'
+    }
