--- a/local_settings_ci.template
+++ b/local_settings_ci.template
@@ -1,6 +1,7 @@
 LOCAL_DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': 'mydatabase'
+        'ENGINE': 'django.db.backends.postgresql_psycopg2',
+        'USER': 'postgres',
+        'NAME': 'akava_site_test',
     }
 }
