no-forum notice

--- a/deploy/lighttpd.conf
+++ b/deploy/lighttpd.conf
@@ -1,4 +1,4 @@
-# akava
+# *.kavaleu_ru
 $HTTP["host"] =~ "(^|\.)kavaleu\.ru$" {
     fastcgi.server = (
         "/django.fcgi" => (
@@ -10,13 +10,24 @@ $HTTP["host"] =~ "(^|\.)kavaleu\.ru$" {
     )
     alias.url = (
         "/static" => env.HOME + "/kavaleu_ru/static",
-	"/demo/angular"  => env.HOME + "/kavaleu_ru/externals/angular_tutor",
+        "/admin1/media" => env.HOME + "/.virtualenvs/kavaleu_ru/lib/python2.6/site-packages/django/contrib",
+        "/demo/angular"  => env.HOME + "/kavaleu_ru/externals/angular_tutor",
     )
 
     url.rewrite-once = (
         "^(/static.*)$" => "$1",
-	"^(/demo/angular.*)$" => "$1",
+        "^(/admin1/media.*)$" => "$1",
+        "^(/demo/angular.*)$" => "$1",
         "^/favicon\.ico$" => "/static/favicon.ico",
-        "^(/.*)$" => "/django.fcgi$1",
+	"^(/.*)$" => "/django.fcgi$1",
     )
+}
+
+# forum.kavaleu.ru
+$HTTP["host"] == "forum.kavaleu.ru" {
+    server.document-root = env.HOME + "/kavaleu_ru/"
+    url.rewrite-once = (
+        "^(/.*)$" => "/forum.html",
+    )
+    mimetype.assign = ( ".html" => "text/html; charset=utf-8" )
 }
